src/main/java/com/example/cotacao/errors/InactiveProductError.java
package com.example.cotacao.errors;


public class InactiveProductError extends BusinessError {

    public InactiveProductError() {
        super("Produto inativo.");
    }

}
